Use Long.valueOf